--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,15 @@
     padding: 10px;
 }
 
+.codosupport-pagination button{
+    opacity: 0.6;
+    margin-right: 2px;
+}
+
+.codosupport-pagination button.active{
+    opacity: 1;
+}
+
 .icon-spin {
     -webkit-animation: icon-spin 2s infinite linear;
             animation: icon-spin 2s infinite linear;
